--- a/ecommerce/templates/store/main.html
+++ b/ecommerce/templates/store/main.html
@@ -9,6 +9,22 @@
     <title>{% block title %}Welcome to shop!{% endblock %}</title>
     <script text="text/javascript">
       let user = '{{request.user}}'
+      const getToken = (name) => {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+          const cookies = document.cookie.split(';');
+          for (let i = 0; i < cookies.length; i++) {
+            const cookie = cookies[i].trim();
+            // Does this cookie string begin with the name we want?
+            if (cookie.substring(0, name.length + 1) === (name + '=')) {
+              cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+              break;
+            }
+          }
+        }
+        return cookieValue;
+      }
+      const csrftoken = getToken('csrftoken');
     </script>
 </head>
 <body>
