--- a/ecommerce/templates/store/includes/navbar.html
+++ b/ecommerce/templates/store/includes/navbar.html
@@ -14,7 +14,7 @@
       <div class="form-inline my-2 my-lg-0">
           <a href="#" class="btn btn-warning">Login</a>
           <a href="{% url 'store:cart' %}"><img src="{% static 'store/img/cart.png' %}" id="cart-icon" alt="cart image"></a>
-          <p id="cart-total">0</p>
+          <p id="cart-total">{{cartItems}}</p>
       </div>
     </div>
 </nav>
