--- a/ecommerce/templates/store/checkout.html
+++ b/ecommerce/templates/store/checkout.html
@@ -61,4 +61,11 @@
             </div>
         </div>
     </div>
+
+<script type="text/javascript">
+  const shipping = '{{order.shipping}}'
+  if (shipping == 'False') {
+    document.getElementById('shipping-info').innerHTML = ''
+  }
+</script>
 {% endblock %}
