--- a/ecommerce/templates/store/checkout.html
+++ b/ecommerce/templates/store/checkout.html
@@ -40,6 +40,7 @@
             <br>
             <div class="box-element hidden" id="payment-info">
                 <small>Paypal Options</small>
+                <button id="make-payment">Make Payment</button>
             </div>
         </div>
         <div class="col-lg-6">
@@ -68,6 +69,15 @@
     document.getElementById('shipping-info').innerHTML = ''
   }
 
+  if (user != 'AnonymousUser') {
+    document.getElementById('user-info').innerHTML = ''
+  }
+
+  if (shipping == 'False' && user != 'AnonymousUser') {
+    document.getElementById('form-wrapper').classList.add('hidden');
+    document.getElementById('payment-info').classList.remove('hidden');
+  }
+
   let form = document.getElementById('form');
   form.addEventListener('submit', function(e) {
     e.preventDefault();
@@ -75,5 +85,13 @@
     document.getElementById('form-button').classList.add('hidden');
     document.getElementById('payment-info').classList.remove('hidden');
   });
+
+  document.getElementById('make-payment').addEventListener('click', function(e) {
+    submitFormData();
+  })
+
+  const submitFormData = () => {
+    console.log('Payment button clicked');
+  }
 </script>
 {% endblock %}
