--- a/ecommerce/templates/store/checkout.html
+++ b/ecommerce/templates/store/checkout.html
@@ -64,7 +64,9 @@
     </div>
 
 <script type="text/javascript">
-  const shipping = '{{order.shipping}}'
+  const shipping = '{{order.shipping}}';
+  const total = '{{order.get_cart_total|floatformat:2}}';
+
   if (shipping == 'False') {
     document.getElementById('shipping-info').innerHTML = ''
   }
@@ -92,6 +94,48 @@
 
   const submitFormData = () => {
     console.log('Payment button clicked');
+    const userFormData = {
+      'name': null,
+      'email': null,
+      'total': total,
+    }
+    const shippingInfo = {
+      'address': null,
+      'city': null,
+      'state': null,
+      'zipcode': null,
+    }
+
+    if (shipping != 'False') {
+      shippingInfo.address = form.address.value;
+      shippingInfo.city = form.city.value;
+      shippingInfo.state = form.state.value;
+      shippingInfo.zipcode = form.zipcode.value;
+    }
+
+    if (user == 'AnonymousUser') {
+      userFormData.name = form.name.value;
+      userFormData.email = form.email.value;
+    }
+
+    const url = '/process_order/';
+    fetch(url, {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json',
+        'X-CSRFToken': csrftoken,
+      },
+      body: JSON.stringify({
+        'form': userFormData,
+        'shipping': shippingInfo, 
+      })
+    })
+    .then((res) => res.json())
+    .then((data) => {
+      console.log('Success', data);
+      alert('Transaction completed');
+      window.location.href = "{% url 'store:store' %}";
+    });
   }
 </script>
 {% endblock %}
