--- a/ecommerce/templates/store/main.html
+++ b/ecommerce/templates/store/main.html
@@ -28,11 +28,11 @@
 
       function getCookie(name) {
 		    // Split cookie string and get all individual name=value pairs in an array
-		    var cookieArr = document.cookie.split(";");
+		    const cookieArr = document.cookie.split(";");
 
 		    // Loop through the array elements
-		    for(var i = 0; i < cookieArr.length; i++) {
-		        var cookiePair = cookieArr[i].split("=");
+		    for(let i = 0; i < cookieArr.length; i++) {
+		        const cookiePair = cookieArr[i].split("=");
 
 		        /* Removing whitespace at the beginning of the cookie name
 		        and compare it with the given string */
@@ -52,7 +52,7 @@
         console.log('Cart Created!', cart)
         document.cookie ='cart=' + JSON.stringify(cart) + ";domain=;path=/"
       }
-      console.log('Cart:', cart)
+      console.log({cart});
     </script>
 </head>
 <body>
