--- a/ecommerce/templates/store/includes/navbar.html
+++ b/ecommerce/templates/store/includes/navbar.html
@@ -12,7 +12,7 @@
         </li>
       </ul>
       <div class="form-inline my-2 my-lg-0">
-          <a href="#" class="btn btn-warning">Login</a>
+          <a href="/admin" class="btn btn-warning">Login</a>
           <a href="{% url 'store:cart' %}"><img src="{% static 'store/img/cart.png' %}" id="cart-icon" alt="cart image"></a>
           <p id="cart-total">{{cartItems}}</p>
       </div>
