--- a/ecommerce/templates/store/main.html
+++ b/ecommerce/templates/store/main.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'store/css/main.css' %}">
+    <link rel="icon" href="{% static 'store/img/icon.ico' %}">
     <title>{% block title %}Welcome to shop!{% endblock %}</title>
     <script text="text/javascript">
       let user = '{{request.user}}'
