--- a/ecommerce/templates/store/cart.html
+++ b/ecommerce/templates/store/cart.html
@@ -33,8 +33,8 @@
                     <div style="flex: 1;">
                         <p class="quantity">{{item.quantity}}</p>
                         <div class="quantity">
-                            <img class="chg-quantity update-cart" data-product="{{item.product.id}}" data-action="add" src="{% static  'store/img/arrow-up.png' %}">
-				            <img class="chg-quantity update-cart" data-product="{{item.product.id}}" data-action="remove" src="{% static  'store/img/arrow-down.png' %}">
+                            <img class="chg-quantity update-cart" alt="add item" data-product="{{item.product.id}}" data-action="add" src="{% static  'store/img/arrow-up.png' %}">
+				            <img class="chg-quantity update-cart" alt="remove item" data-product="{{item.product.id}}" data-action="remove" src="{% static  'store/img/arrow-down.png' %}">
                         </div>
                     </div>
                     <div style="flex: 1;">${{item.get_total}}</div>
