--- a/ecommerce/templates/store/main.html
+++ b/ecommerce/templates/store/main.html
@@ -15,6 +15,7 @@
         {% block content %}
         {% endblock %}
     </div>
+    {% include 'store/includes/footer.html' %}
 
     <script text="text/javascript">
       let user = '{{request.user}}'
